Mobile Responsive Media Query add

--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@ li,
   width: 38%;
 }
 .controls .row .icons i {
-  width: 50px;
+  width: 304px;
   color: #adadad;
   font-size: 14px;
   cursor: pointer;
@@ -214,4 +214,43 @@ li,
   100% {
     transform: rotate(360deg);
   }
+}
+
+
+@media only screen and (max-width: 600px) {
+  .container {
+    min-width: 345px;
+    width: 30%;
+
+  }
+  .controls .row .icons {
+    width: 25%;
+  }
+
+  .controls {
+    list-style: none;
+    padding: 1px 1px;
+    margin-top: 2px;
+}
+.controls .row select {
+  color: #333;
+  border: none;
+  outline: none;
+  font-size: 8px;
+  font-weight: bold;
+  background: none;
+}
+option {
+  font-size: small;
+}
+.wrapper {
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 290px;
+}
+.controls .row .icons i {
+  width: 50px;
+  font-size: 14px;
+
+}
 }
